// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Description List horizontal renders correctly 1`] = `
<jest>
  <div
    class="bcl-description-list"
  >
    <dl
      class="d-md-grid grid-3-9 mb-3"
    >
      <dt
        class="d-flex"
      >
        <svg
          class="me-2 mt-1 bcl-icon bi icon--xs"
        >
          <use
            xlink:href="/icons.svg#geo-alt-fill"
          />
        </svg>
        <p
          class="mb-0 d-inline-block"
        >
          Only title label with icon
        </p>
      </dt>
      <dd>
        Description text goes here.
      </dd>
    </dl>
    <dl
      class="d-md-grid grid-3-9 mb-3"
    >
      <dt>
        <div>
          First title label      
        </div>
        <div
          class="d-flex"
        >
          <svg
            class="me-2 mt-1 bcl-icon bi icon--xs"
          >
            <use
              xlink:href="/icons.svg#geo-alt-fill"
            />
          </svg>
          <p
            class="mb-0 d-inline-block"
          >
            Second title label
          </p>
        </div>
      </dt>
      <dd>
        Description text goes here.
      </dd>
    </dl>
    <dl
      class="d-md-grid grid-3-9 mb-3"
    >
      <dt>
        Only title label
      </dt>
      <dd>
        <div>
          Description text goes here.
        </div>
        <div>
          Description text goes here.
        </div>
      </dd>
    </dl>
  </div>
</jest>
`;

exports[`OE - Description List renders correctly 1`] = `
<jest>
  <div
    class="bcl-description-list"
  >
    <dl
      class="mb-3"
    >
      <dt>
        <svg
          class="me-2 bcl-icon bi icon--xs"
        >
          <use
            xlink:href="/icons.svg#geo-alt-fill"
          />
        </svg>
        <p
          class="mb-0 d-inline-block"
        >
          Only title label with icon
        </p>
      </dt>
      <dd>
        Description text goes here.
      </dd>
    </dl>
    <dl
      class="mb-3"
    >
      <dt>
        <div>
          First title label      
        </div>
        <div>
          <svg
            class="me-2 bcl-icon bi icon--xs"
          >
            <use
              xlink:href="/icons.svg#geo-alt-fill"
            />
          </svg>
          <p
            class="mb-0 d-inline-block"
          >
            Second title label
          </p>
        </div>
      </dt>
      <dd>
        Description text goes here.
      </dd>
    </dl>
    <dl>
      <dt>
        Only title label
      </dt>
      <dd>
        Description text goes here.
      </dd>
      <dd>
        Description text goes here.
      </dd>
    </dl>
  </div>
</jest>
`;

exports[`OE - Description List with title bordered renders correctly 1`] = `
<jest>
  <h6
    class="bcl-heading"
  >
    Description list test title
  </h6>
  <div
    class="bcl-description-list"
  >
    <dl
      class="mb-2-5 pb-2-5 border-bottom"
    >
      <dt>
        <svg
          class="me-2 bcl-icon bi icon--xs"
        >
          <use
            xlink:href="/icons.svg#geo-alt-fill"
          />
        </svg>
        <p
          class="mb-0 d-inline-block"
        >
          Only title label with icon
        </p>
      </dt>
      <dd>
        Description text goes here.
      </dd>
    </dl>
    <dl
      class="mb-2-5 pb-2-5 border-bottom"
    >
      <dt>
        <div>
          First title label      
        </div>
        <div>
          <svg
            class="me-2 bcl-icon bi icon--xs"
          >
            <use
              xlink:href="/icons.svg#geo-alt-fill"
            />
          </svg>
          <p
            class="mb-0 d-inline-block"
          >
            Second title label
          </p>
        </div>
      </dt>
      <dd>
        Description text goes here.
      </dd>
    </dl>
    <dl>
      <dt>
        Only title label
      </dt>
      <dd>
        Description text goes here.
      </dd>
      <dd>
        Description text goes here.
      </dd>
    </dl>
  </div>
</jest>
`;

exports[`OE - Description List with title horizontal and bordered renders correctly 1`] = `
<jest>
  <h6
    class="bcl-heading"
  >
    Description list test title
  </h6>
  <div
    class="bcl-description-list"
  >
    <dl
      class="d-md-grid grid-3-9 mb-2-5 pb-2-5 border-bottom"
    >
      <dt
        class="d-flex"
      >
        <svg
          class="me-2 mt-1 bcl-icon bi icon--xs"
        >
          <use
            xlink:href="/icons.svg#geo-alt-fill"
          />
        </svg>
        <p
          class="mb-0 d-inline-block"
        >
          Only title label with icon
        </p>
      </dt>
      <dd
        class="mb-0"
      >
        Description text goes here.
      </dd>
    </dl>
    <dl
      class="d-md-grid grid-3-9 mb-2-5 pb-2-5 border-bottom"
    >
      <dt>
        <div>
          First title label      
        </div>
        <div
          class="d-flex"
        >
          <svg
            class="me-2 mt-1 bcl-icon bi icon--xs"
          >
            <use
              xlink:href="/icons.svg#geo-alt-fill"
            />
          </svg>
          <p
            class="mb-0 d-inline-block"
          >
            Second title label
          </p>
        </div>
      </dt>
      <dd
        class="mb-0"
      >
        Description text goes here.
      </dd>
    </dl>
    <dl
      class="d-md-grid grid-3-9 mb-2-5 pb-2-5 border-bottom"
    >
      <dt>
        Only title label
      </dt>
      <dd
        class="mb-0"
      >
        <div>
          Description text goes here.
        </div>
        <div>
          Description text goes here.
        </div>
      </dd>
    </dl>
  </div>
</jest>
`;

exports[`OE - Description List with title horizontal renders correctly 1`] = `
<jest>
  <h6
    class="bcl-heading"
  >
    Description list test title
  </h6>
  <div
    class="bcl-description-list"
  >
    <dl
      class="d-md-grid grid-3-9 mb-3"
    >
      <dt
        class="d-flex"
      >
        <svg
          class="me-2 mt-1 bcl-icon bi icon--xs"
        >
          <use
            xlink:href="/icons.svg#geo-alt-fill"
          />
        </svg>
        <p
          class="mb-0 d-inline-block"
        >
          Only title label with icon
        </p>
      </dt>
      <dd>
        Description text goes here.
      </dd>
    </dl>
    <dl
      class="d-md-grid grid-3-9 mb-3"
    >
      <dt>
        <div>
          First title label      
        </div>
        <div
          class="d-flex"
        >
          <svg
            class="me-2 mt-1 bcl-icon bi icon--xs"
          >
            <use
              xlink:href="/icons.svg#geo-alt-fill"
            />
          </svg>
          <p
            class="mb-0 d-inline-block"
          >
            Second title label
          </p>
        </div>
      </dt>
      <dd>
        Description text goes here.
      </dd>
    </dl>
    <dl
      class="d-md-grid grid-3-9 mb-3"
    >
      <dt>
        Only title label
      </dt>
      <dd>
        <div>
          Description text goes here.
        </div>
        <div>
          Description text goes here.
        </div>
      </dd>
    </dl>
  </div>
</jest>
`;

exports[`OE - Description List with title renders correctly 1`] = `
<jest>
  <h6
    class="bcl-heading"
  >
    Description list test title
  </h6>
  <div
    class="bcl-description-list"
  >
    <dl
      class="mb-3"
    >
      <dt>
        <svg
          class="me-2 bcl-icon bi icon--xs"
        >
          <use
            xlink:href="/icons.svg#geo-alt-fill"
          />
        </svg>
        <p
          class="mb-0 d-inline-block"
        >
          Only title label with icon
        </p>
      </dt>
      <dd>
        Description text goes here.
      </dd>
    </dl>
    <dl
      class="mb-3"
    >
      <dt>
        <div>
          First title label      
        </div>
        <div>
          <svg
            class="me-2 bcl-icon bi icon--xs"
          >
            <use
              xlink:href="/icons.svg#geo-alt-fill"
            />
          </svg>
          <p
            class="mb-0 d-inline-block"
          >
            Second title label
          </p>
        </div>
      </dt>
      <dd>
        Description text goes here.
      </dd>
    </dl>
    <dl>
      <dt>
        Only title label
      </dt>
      <dd>
        Description text goes here.
      </dd>
      <dd>
        Description text goes here.
      </dd>
    </dl>
  </div>
</jest>
`;
